cabal-version:      2.4

name:               sudoku

version:            0.1.0.0

license: BSD-2-Clause

license-file: LICENSE

author: mfbott

copyright: mfbott

category: solvers

extra-source-files: CHANGELOG.md


library
    exposed-modules:  Sudoku
    ghc-options: -Wall -O2 -Werror=incomplete-patterns
    build-depends:    base ^>=4.14.1.0,
    		      vector,
		      containers
    hs-source-dirs:   src
    default-language: Haskell2010

executable sudoku
    main-is:          Main.hs
    ghc-options: -Wall -O2 -Werror=incomplete-patterns
    build-depends:
        base ^>=4.14.1.0,
        sudoku

    hs-source-dirs:   app
    default-language: Haskell2010
